src/parsers/xml/XMLParser.py
# Generated from ./src/parsers/xml/XMLParser.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class XMLParser ( Parser ):

    grammarFileName = "XMLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'<'", "<INVALID>", 
                     "<INVALID>", "'DAO-ML_diagram'", "'DAO'", "'Role'", 
                     "'Committee'", "'Permission'", "'GovernanceArea'", 
                     "'associated_to'", "'is_controlled_by'", "'aggregates'", 
                     "'federates_into'", "'DAO_ID'", "'DAO_name'", "'mission_statement'", 
                     "'hierarchical_inheritance'", "'role_ID'", "'role_name'", 
                     "'role_assignment_method'", "'committee_ID'", "'committee_description'", 
                     "'n_agent_min'", "'n_agent_max'", "'decision_making_method'", 
                     "'voting_condition'", "'proposal_condition'", "'permission_ID'", 
                     "'ref_gov_area'", "'allowed_action'", "'agent_type'", 
                     "'permission_type'", "'federation_level'", "'aggregation_level'", 
                     "'>'", "<INVALID>", "'/>'", "'/'", "'='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'\"'", "'uniqueID'", "'dao'" ]

    symbolicNames = [ "<INVALID>", "COMMENT", "CDATA", "DTD", "EntityRef", 
                      "CharRef", "SEA_WS", "OPEN", "XMLDeclOpen", "TEXT", 
                      "DIAGRAM", "DAO", "ROLE", "COMMITTEE", "PERMISSION", 
                      "GOV", "ASSOCIATION", "CONTROL", "AGGREGATES", "FEDERATES", 
                      "DAOID", "DAONAME", "MISSIONSTATEMENT", "HIERARCHICALINHERITANCE", 
                      "ROLEID", "ROLENAME", "ROLEASSIGNMENTMETHOD", "COMMITTEEID", 
                      "COMMITTEEDESCRIPTION", "NAGENTMIN", "NAGENTMAX", 
                      "DMMETHOD", "VOTINGCONDITION", "PROPOSALCONDITION", 
                      "PERMISSIONID", "REF_GOV_AREA", "ALLOWEDACTION", "AGENTTYPE", 
                      "PERMISSIONTYPE", "FEDERATIONLEVEL", "AGGREGATIONLEVEL", 
                      "CLOSE", "SPECIAL_CLOSE", "SLASH_CLOSE", "SLASH", 
                      "EQUALS", "STRING", "Name", "S", "DOUBLE_TICK", "UNIQUEID_LITERAL", 
                      "UNIQUEID_PREFIX", "UUIDV4", "UNIQUEID", "PI" ]

    RULE_document = 0
    RULE_prolog = 1
    RULE_content = 2
    RULE_element = 3
    RULE_diagram = 4
    RULE_dao = 5
    RULE_role = 6
    RULE_committee = 7
    RULE_permission = 8
    RULE_gov = 9
    RULE_daocontent = 10
    RULE_relations = 11
    RULE_associated_to = 12
    RULE_controlled_by = 13
    RULE_aggregates = 14
    RULE_federates_into = 15
    RULE_reference = 16
    RULE_comments_and_stuff = 17
    RULE_set_of_attributes = 18
    RULE_dao_id = 19
    RULE_dao_name = 20
    RULE_mission_statement = 21
    RULE_hierarchical_inheritance = 22
    RULE_role_id = 23
    RULE_role_name = 24
    RULE_role_assignment_method = 25
    RULE_n_agent_min = 26
    RULE_n_agent_max = 27
    RULE_agent_type = 28
    RULE_committee_id = 29
    RULE_committee_description = 30
    RULE_voting_condition = 31
    RULE_proposal_condition = 32
    RULE_decision_making_method = 33
    RULE_aggregation_level = 34
    RULE_federation_level = 35
    RULE_permission_id = 36
    RULE_allowed_action = 37
    RULE_permission_type = 38
    RULE_ref_gov_area = 39
    RULE_attribute = 40
    RULE_unique_id = 41
    RULE_chardata = 42
    RULE_misc = 43

    ruleNames =  [ "document", "prolog", "content", "element", "diagram", 
                   "dao", "role", "committee", "permission", "gov", "daocontent", 
                   "relations", "associated_to", "controlled_by", "aggregates", 
                   "federates_into", "reference", "comments_and_stuff", 
                   "set_of_attributes", "dao_id", "dao_name", "mission_statement", 
                   "hierarchical_inheritance", "role_id", "role_name", "role_assignment_method", 
                   "n_agent_min", "n_agent_max", "agent_type", "committee_id", 
                   "committee_description", "voting_condition", "proposal_condition", 
                   "decision_making_method", "aggregation_level", "federation_level", 
                   "permission_id", "allowed_action", "permission_type", 
                   "ref_gov_area", "attribute", "unique_id", "chardata", 
                   "misc" ]

    EOF = Token.EOF
    COMMENT=1
    CDATA=2
    DTD=3
    EntityRef=4
    CharRef=5
    SEA_WS=6
    OPEN=7
    XMLDeclOpen=8
    TEXT=9
    DIAGRAM=10
    DAO=11
    ROLE=12
    COMMITTEE=13
    PERMISSION=14
    GOV=15
    ASSOCIATION=16
    CONTROL=17
    AGGREGATES=18
    FEDERATES=19
    DAOID=20
    DAONAME=21
    MISSIONSTATEMENT=22
    HIERARCHICALINHERITANCE=23
    ROLEID=24
    ROLENAME=25
    ROLEASSIGNMENTMETHOD=26
    COMMITTEEID=27
    COMMITTEEDESCRIPTION=28
    NAGENTMIN=29
    NAGENTMAX=30
    DMMETHOD=31
    VOTINGCONDITION=32
    PROPOSALCONDITION=33
    PERMISSIONID=34
    REF_GOV_AREA=35
    ALLOWEDACTION=36
    AGENTTYPE=37
    PERMISSIONTYPE=38
    FEDERATIONLEVEL=39
    AGGREGATIONLEVEL=40
    CLOSE=41
    SPECIAL_CLOSE=42
    SLASH_CLOSE=43
    SLASH=44
    EQUALS=45
    STRING=46
    Name=47
    S=48
    DOUBLE_TICK=49
    UNIQUEID_LITERAL=50
    UNIQUEID_PREFIX=51
    UUIDV4=52
    UNIQUEID=53
    PI=54

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class DocumentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def diagram(self):
            return self.getTypedRuleContext(XMLParser.DiagramContext,0)


        def EOF(self):
            return self.getToken(XMLParser.EOF, 0)

        def prolog(self):
            return self.getTypedRuleContext(XMLParser.PrologContext,0)


        def misc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.MiscContext)
            else:
                return self.getTypedRuleContext(XMLParser.MiscContext,i)


        def getRuleIndex(self):
            return XMLParser.RULE_document

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDocument" ):
                listener.enterDocument(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDocument" ):
                listener.exitDocument(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDocument" ):
                return visitor.visitDocument(self)
            else:
                return visitor.visitChildren(self)




    def document(self):

        localctx = XMLParser.DocumentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_document)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==8:
                self.state = 88
                self.prolog()


            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18014398509482050) != 0):
                self.state = 91
                self.misc()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 97
            self.diagram()
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18014398509482050) != 0):
                self.state = 98
                self.misc()
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 104
            self.match(XMLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrologContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def XMLDeclOpen(self):
            return self.getToken(XMLParser.XMLDeclOpen, 0)

        def SPECIAL_CLOSE(self):
            return self.getToken(XMLParser.SPECIAL_CLOSE, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(XMLParser.AttributeContext,i)


        def getRuleIndex(self):
            return XMLParser.RULE_prolog

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProlog" ):
                listener.enterProlog(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProlog" ):
                listener.exitProlog(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProlog" ):
                return visitor.visitProlog(self)
            else:
                return visitor.visitChildren(self)




    def prolog(self):

        localctx = XMLParser.PrologContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_prolog)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 106
            self.match(XMLParser.XMLDeclOpen)
            self.state = 110
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==47:
                self.state = 107
                self.attribute()
                self.state = 112
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 113
            self.match(XMLParser.SPECIAL_CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def chardata(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.ChardataContext)
            else:
                return self.getTypedRuleContext(XMLParser.ChardataContext,i)


        def element(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.ElementContext)
            else:
                return self.getTypedRuleContext(XMLParser.ElementContext,i)


        def reference(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.ReferenceContext)
            else:
                return self.getTypedRuleContext(XMLParser.ReferenceContext,i)


        def comments_and_stuff(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.Comments_and_stuffContext)
            else:
                return self.getTypedRuleContext(XMLParser.Comments_and_stuffContext,i)


        def getRuleIndex(self):
            return XMLParser.RULE_content

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterContent" ):
                listener.enterContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitContent" ):
                listener.exitContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitContent" ):
                return visitor.visitContent(self)
            else:
                return visitor.visitChildren(self)




    def content(self):

        localctx = XMLParser.ContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_content)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6 or _la==9:
                self.state = 115
                self.chardata()


            self.state = 128
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,7,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 121
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [7]:
                        self.state = 118
                        self.element()
                        pass
                    elif token in [4, 5]:
                        self.state = 119
                        self.reference()
                        pass
                    elif token in [1, 2, 54]:
                        self.state = 120
                        self.comments_and_stuff()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 124
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==6 or _la==9:
                        self.state = 123
                        self.chardata()

             
                self.state = 130
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,7,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ElementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.OPEN)
            else:
                return self.getToken(XMLParser.OPEN, i)

        def Name(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.Name)
            else:
                return self.getToken(XMLParser.Name, i)

        def CLOSE(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.CLOSE)
            else:
                return self.getToken(XMLParser.CLOSE, i)

        def content(self):
            return self.getTypedRuleContext(XMLParser.ContentContext,0)


        def SLASH(self):
            return self.getToken(XMLParser.SLASH, 0)

        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(XMLParser.AttributeContext,i)


        def SLASH_CLOSE(self):
            return self.getToken(XMLParser.SLASH_CLOSE, 0)

        def getRuleIndex(self):
            return XMLParser.RULE_element

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterElement" ):
                listener.enterElement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitElement" ):
                listener.exitElement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitElement" ):
                return visitor.visitElement(self)
            else:
                return visitor.visitChildren(self)




    def element(self):

        localctx = XMLParser.ElementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_element)
        self._la = 0 # Token type
        try:
            self.state = 155
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,10,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 131
                self.match(XMLParser.OPEN)
                self.state = 132
                self.match(XMLParser.Name)
                self.state = 136
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==47:
                    self.state = 133
                    self.attribute()
                    self.state = 138
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 139
                self.match(XMLParser.CLOSE)
                self.state = 140
                self.content()
                self.state = 141
                self.match(XMLParser.OPEN)
                self.state = 142
                self.match(XMLParser.SLASH)
                self.state = 143
                self.match(XMLParser.Name)
                self.state = 144
                self.match(XMLParser.CLOSE)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 146
                self.match(XMLParser.OPEN)
                self.state = 147
                self.match(XMLParser.Name)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==47:
                    self.state = 148
                    self.attribute()
                    self.state = 153
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                self.state = 154
                self.match(XMLParser.SLASH_CLOSE)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DiagramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.OPEN)
            else:
                return self.getToken(XMLParser.OPEN, i)

        def DIAGRAM(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.DIAGRAM)
            else:
                return self.getToken(XMLParser.DIAGRAM, i)

        def CLOSE(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.CLOSE)
            else:
                return self.getToken(XMLParser.CLOSE, i)

        def SLASH(self):
            return self.getToken(XMLParser.SLASH, 0)

        def misc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.MiscContext)
            else:
                return self.getTypedRuleContext(XMLParser.MiscContext,i)


        def unique_id(self):
            return self.getTypedRuleContext(XMLParser.Unique_idContext,0)


        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(XMLParser.AttributeContext,i)


        def chardata(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.ChardataContext)
            else:
                return self.getTypedRuleContext(XMLParser.ChardataContext,i)


        def dao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.DaoContext)
            else:
                return self.getTypedRuleContext(XMLParser.DaoContext,i)


        def reference(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.ReferenceContext)
            else:
                return self.getTypedRuleContext(XMLParser.ReferenceContext,i)


        def comments_and_stuff(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.Comments_and_stuffContext)
            else:
                return self.getTypedRuleContext(XMLParser.Comments_and_stuffContext,i)


        def getRuleIndex(self):
            return XMLParser.RULE_diagram

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDiagram" ):
                listener.enterDiagram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDiagram" ):
                listener.exitDiagram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDiagram" ):
                return visitor.visitDiagram(self)
            else:
                return visitor.visitChildren(self)




    def diagram(self):

        localctx = XMLParser.DiagramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_diagram)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 157
            self.match(XMLParser.OPEN)
            self.state = 158
            self.match(XMLParser.DIAGRAM)
            self.state = 162
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 159
                    self.misc() 
                self.state = 164
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 172
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,13,self._ctx)
            if la_ == 1:
                self.state = 166 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while True:
                    self.state = 165
                    self.attribute()
                    self.state = 168 
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if not (_la==47):
                        break

                self.state = 170
                self.unique_id()


            self.state = 177
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==47:
                self.state = 174
                self.attribute()
                self.state = 179
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 183
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18014398509482050) != 0):
                self.state = 180
                self.misc()
                self.state = 185
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 186
            self.match(XMLParser.CLOSE)
            self.state = 188
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==6 or _la==9:
                self.state = 187
                self.chardata()


            self.state = 207
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,20,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 194
                    self._errHandler.sync(self)
                    token = self._input.LA(1)
                    if token in [7]:
                        self.state = 190
                        self.dao()
                        pass
                    elif token in [4, 5]:
                        self.state = 191
                        self.reference()
                        pass
                    elif token in [1, 2, 54]:
                        self.state = 192
                        self.comments_and_stuff()
                        pass
                    elif token in [47]:
                        self.state = 193
                        self.attribute()
                        pass
                    else:
                        raise NoViableAltException(self)

                    self.state = 199
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,18,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 196
                            self.misc() 
                        self.state = 201
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,18,self._ctx)

                    self.state = 203
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    if _la==6 or _la==9:
                        self.state = 202
                        self.chardata()

             
                self.state = 209
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

            self.state = 210
            self.match(XMLParser.OPEN)
            self.state = 211
            self.match(XMLParser.SLASH)
            self.state = 212
            self.match(XMLParser.DIAGRAM)
            self.state = 213
            self.match(XMLParser.CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.OPEN)
            else:
                return self.getToken(XMLParser.OPEN, i)

        def DAO(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.DAO)
            else:
                return self.getToken(XMLParser.DAO, i)

        def CLOSE(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.CLOSE)
            else:
                return self.getToken(XMLParser.CLOSE, i)

        def daocontent(self):
            return self.getTypedRuleContext(XMLParser.DaocontentContext,0)


        def SLASH(self):
            return self.getToken(XMLParser.SLASH, 0)

        def misc(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.MiscContext)
            else:
                return self.getTypedRuleContext(XMLParser.MiscContext,i)


        def dao_id(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.Dao_idContext)
            else:
                return self.getTypedRuleContext(XMLParser.Dao_idContext,i)


        def dao_name(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.Dao_nameContext)
            else:
                return self.getTypedRuleContext(XMLParser.Dao_nameContext,i)


        def mission_statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.Mission_statementContext)
            else:
                return self.getTypedRuleContext(XMLParser.Mission_statementContext,i)


        def hierarchical_inheritance(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.Hierarchical_inheritanceContext)
            else:
                return self.getTypedRuleContext(XMLParser.Hierarchical_inheritanceContext,i)


        def comments_and_stuff(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.Comments_and_stuffContext)
            else:
                return self.getTypedRuleContext(XMLParser.Comments_and_stuffContext,i)


        def attribute(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(XMLParser.AttributeContext)
            else:
                return self.getTypedRuleContext(XMLParser.AttributeContext,i)


        def getRuleIndex(self):
            return XMLParser.RULE_dao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDao" ):
                listener.enterDao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDao" ):
                listener.exitDao(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDao" ):
                return visitor.visitDao(self)
            else:
                return visitor.visitChildren(self)




    def dao(self):

        localctx = XMLParser.DaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_dao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 215
            self.match(XMLParser.OPEN)
            self.state = 216
            self.match(XMLParser.DAO)
            self.state = 220
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,21,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 217
                    self.misc() 
                self.state = 222
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,21,self._ctx)

            self.state = 239
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 18155136013565958) != 0):
                self.state = 229
                self._errHandler.sync(self)
                token = self._input.LA(1)
                if token in [20]:
                    self.state = 223
                    self.dao_id()
                    pass
                elif token in [21]:
                    self.state = 224
                    self.dao_name()
                    pass
                elif token in [22]:
                    self.state = 225
                    self.mission_statement()
                    pass
                elif token in [23]:
                    self.state = 226
                    self.hierarchical_inheritance()
                    pass
                elif token in [1, 2, 54]:
                    self.state = 227
                    self.comments_and_stuff()
                    pass
                elif token in [47]:
                    self.state = 228
                    self.attribute()
                    pass
                else:
                    raise NoViableAltException(self)

                self.state = 234
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,23,self._ctx)
                while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                    if _alt==1:
                        self.state = 231
                        self.misc() 
                    self.state = 236
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,23,self._ctx)

                self.state = 241
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 242
            self.match(XMLParser.CLOSE)
            self.state = 243
            self.daocontent()
            self.state = 244
            self.match(XMLParser.OPEN)
            self.state = 245
            self.match(XMLParser.SLASH)
            self.state = 246
            self.match(XMLParser.DAO)
            self.state = 247
            self.match(XMLParser.CLOSE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RoleContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def OPEN(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.OPEN)
            else:
                return self.getToken(XMLParser.OPEN, i)

        def ROLE(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.ROLE)
            else:
                return self.getToken(XMLParser.ROLE, i)

        def CLOSE(self, i:int=None):
            if i is None:
                return self.getTokens(XMLParser.CLOSE)
            else:
                return self.getToken(XMLParser.CLOSE, i)

        def relations(self):
            return self.getTypedRuleContext(XMLParser.RelationsContext,0)


        def SLASH(self):
            return self.getToken(XMLParser.SLASH, 0)
